Implement basic form validation

--- a/index.html
+++ b/index.html
@@ -11,18 +11,6 @@
     <header>
     <div class="header">
             <h1>Geo-Search</h1>
-        
-        <nav>
-            <div class="mySidebar" id="sidebar">
-                <a href="#" class="close-button" id="closeButton">X</a>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="main">
-                <button class="openbtn"  id="openNav">☰Menu</button>
-            </div>
-        </nav>
     </div>
     </header>
     <main>
@@ -32,8 +20,13 @@
             </section>
             <section class="second-section">
                 <h3>Search input</h3>
-                <input type="text" class="search-input" id="input" placeholder="Enter a location">
-                <button class="search-button">Search</button>
+            <form action=""id="form"> 
+                <label for="input"></label> 
+                <input type="text" class="search-input" id="input" placeholder="Enter a location" autocomplete="true">
+                <div class="loader"></div>
+                <button class="search-button" id="searchButton">Search</button>
+                <span id="error"></span>
+            </form>  
             </section>
             <section class="third-section">
                 <h3>Local weather condition</h3>
