Display local weather condition

--- a/index.html
+++ b/index.html
@@ -20,17 +20,25 @@
             </section>
             <section class="second-section">
                 <h3>Search input</h3>
-            <form action=""id="form"> 
-                <label for="input"></label> 
-                <input type="text" class="search-input" id="input" placeholder="Enter a location" autocomplete="true">
-                <div class="loader"></div>
-                <button class="search-button" id="searchButton">Search</button>
-                <span id="error"></span>
-            </form>  
+                <form action=""id="form"> 
+                    <label for="input"></label> 
+                    <input type="text" class="search-input" id="input" placeholder="Enter a location" autocomplete="true">
+                <!--   <div class="loader"></div>-->
+                    <button class="search-button" id="searchButton">Search</button>
+                    <span id="error"></span>
+                </form>  
+                <div class="pop-up">
+                    <div class="weather">
+                        <div class="Temperature">Temperarture</div>
+                        <div class="wind-speed">Wind Speed</div>
+                        <div class="Humidity">Humidity</div>
+                        <div class="current-weather">Current weather condition</div>        
+                    </div>
+                </div>
             </section>
-            <section class="third-section">
+         <!--  <section class="third-section">
                 <h3>Local weather condition</h3>
-            </section>
+            </section>-->
             
         </div>
     </main>
