make changes to the header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-    <div class="header">
-            <h1>Geo-Search</h1>
-    </div>
+        <div class="header">  
+                <img src="img/search-logo.png" alt="seach-logo" class="logo-img" title="Search-logo"><h1>Geo-Search</h1>
+        </div>
     </header>
     <main>
         <div class="main-wrapper">
@@ -22,7 +22,7 @@
                 <h3>Search input</h3>
                 <form action=""id="form"> 
                     <label for="input"></label> 
-                    <input type="text" class="search-input" id="input" placeholder="Enter a location" autocomplete="true">
+                    <input type="text" class="search-input" id="input" placeholder="Enter a location" autocomplete="true" >
                 <!--   <div class="loader"></div>-->
                     <button class="search-button" id="searchButton">Search</button>
                     <span id="error"></span>
@@ -32,8 +32,8 @@
                         <div class="Temperature">Temperarture</div>
                         <div class="wind-speed">Wind Speed</div>
                         <div class="Humidity">Humidity</div>
-                        <div class="current-weather">Current weather condition</div>        
-                    </div>
+                        <div class="current-weather">Current weather condition</div>  
+                   </div>
                 </div>
             </section>
          <!--  <section class="third-section">
