--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css" type="text/css">
- <link rel="stylesheet" href="file:///C:/Users/Haroon%20Abdulrazaq/Desktop/geo-search/css/fontawesome-free-5.11.2-web/css/all.css">
+ <link rel="stylesheet" href="css/fontawesome-free-5.11.2-web/css/all.css">
     <title>Geo-search</title>
 </head>
 <body>
