--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button class="search-button" id="searchButton">Search</button>
                     <span id="error"></span>
                 </form>  
-                <div class="pop-u">
+                <div class="pop-up">
                     <div class="weather">
                         <div class="wind-speed current-weather">
                             <i class="fas fa-wind" title="Wind speed"></i> <hr>Wind Speed
