Add temperature conversion functions

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                                 <i class="fas fa-snowflake" title="Precipitation"></i><hr> Precipitation
                                 <p class="precipitation-result"></p>
                             </div>  
+                            <div class="lng lat current-weather">
+                                <i class="fas fa-map-marker-alt" title="lng| lat"></i><hr> Longitude & Latitude
+                                <p class="lnglat-result"></p>
+                            </div>  
+                            <div class=" Postal-code current-weather">
+                                <i class="fas fa-mail-bulk" title=" Postal Code"></i><hr> Postal Code
+                                <p class=" Postalcode-result"></p>
+                            </div>  
                             <div class="Temperature current-weather">
                                 <i class="fa fa-thermometer" title="Temperature"></i> <hr>Temperature <br>
                                 <span class="Celsius Fahrenheit">Celsius</span>   
